--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Simon Game</title>
 </head>
 <body>
-    
+    <h1 id="level-title">Press A Key to Start</h1>
+    <div class="container">
+        <div class="row">
+            <div type="button" id=""></div>
+            <div type="button" id=""></div>
+        </div>
+        <div class="row">
+            <div type="button" id=""></div>
+            <div type="button" id=""></div>
+        </div>
+    </div>
+
+
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
