add styles on container and buttons

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1 id="level-title">Press A Key to Start</h1>
     <div class="container">
         <div class="row">
-            <div type="button" id=""></div>
-            <div type="button" id=""></div>
+            <div type="button" id="green"></div>
+            <div type="button" id="red"></div>
         </div>
         <div class="row">
-            <div type="button" id=""></div>
-            <div type="button" id=""></div>
+            <div type="button" id="yellow"></div>
+            <div type="button" id="blue"></div>
         </div>
     </div>
 
