--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P">
     <title>Simon Game</title>
@@ -11,17 +11,14 @@
     <h1 id="level-title">Press A Key to Start</h1>
     <div class="container">
         <div class="row">
-            <div type="button" id="green"></div>
-            <div type="button" id="red"></div>
+            <div type="button" class="btn green"></div>
+            <div type="button" class="btn red"></div>
         </div>
         <div class="row">
-            <div type="button" id="yellow"></div>
-            <div type="button" id="blue"></div>
+            <div type="button" class="btn yellow"></div>
+            <div type="button" class="btn blue"></div>
         </div>
     </div>
-
-
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
